--- a/static/css/style.css
+++ b/static/css/style.css
@@ -134,7 +134,7 @@ p { margin-bottom: 1rem; }
     padding-top: calc(8rem + 34px);
 }
 .page-header {
-    padding-top: calc(1rem + 60px) !important;
+    padding-top: calc(1rem + 120px) !important;
 }
 
 @media (max-width: 768px) {
